fix wrap background

--- a/src/shared/components/PopoverBadge/PopoverBadge.scss
+++ b/src/shared/components/PopoverBadge/PopoverBadge.scss
@@ -9,6 +9,7 @@
   height: fit-content;
   padding: 0;
   border: none;
+  background: none;
 }
 
 .has-tooltip {
